syntax = "proto3";
package model;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/anantadwi13/belajar-go/grpc/model";

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;

  enum UserType {
    ADMIN = 0;
    USER = 1;
  }
  enum PhoneType {
    WORK = 0;
    HOME = 1;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;
  UserType user_type = 5;
  google.protobuf.Timestamp last_updated = 6;
}

service UserService {
  rpc GetAll(GetUserByIdReq) returns (GetUserByIdRes) {}
}

message GetUserByIdReq {

}
message GetUserByIdRes {
  repeated User users = 1;
}